--- a/thesis/ThesisSpecificPages/copyright.tex
+++ b/thesis/ThesisSpecificPages/copyright.tex
@@ -5,8 +5,8 @@
 \ \\ \
 \vspace{16cm}
 \ \\ \
-\copyright{ Indian Institute of Technology Delhi (IITD), New Delhi, 2020.}
-%\\ All rights reserved.
+\copyright{ Saurabh Tewari, Indian Institute of Technology Delhi (IITD), 2023.}
+\\ All rights reserved.
 
 \end{center}
 
