--- a/thesis/ThesisSpecificPages/cover_page.tex
+++ b/thesis/ThesisSpecificPages/cover_page.tex
@@ -6,9 +6,7 @@
 
 \LARGE 
 
-\MakeUppercase{\textbf{OPTIMIZING NEURAL NETWORKS
-		PERFORMANCE ON PARALLEL
-		ARCHITECTURES}}\\
+\MakeUppercase{\textbf{OPTIMIZING NEURAL NETWORKS PERFORMANCE ON PARALLEL ARCHITECTURES}}\\
 
 \vspace{3cm}
 
@@ -21,12 +19,12 @@
 \hspace{0cm}
 %\hbox{\includegraphics[scale=1.0]{figures/logo.eps}}
 %\hbox{\includegraphics[width=8pc]{iitd-logo}}
-\hbox{\includegraphics[width=14pc]{ThesisSpecificPages/iitd-logo.pdf}}
+\hbox{\includegraphics[width=8pc]{ThesisSpecificPages/iitd-logo.pdf}}
 \vspace{1cm}
 
-\large{\bf DEPARTMENT OF COMPUTER SCIENCE \& ENGINEERING}\\
-\large{\bf INDIAN INSTITUTE OF TECHNOLOGY DELHI}\\
-\large{\bf JULY 2023}\\
+\large{DEPARTMENT OF COMPUTER SCIENCE \& ENGINEERING}\\
+\large{INDIAN INSTITUTE OF TECHNOLOGY DELHI}\\
+\large{JULY 2023}\\
 
 \end{center}
 
