--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -257,8 +257,8 @@
 %------------------------------------------------------------------------- 
 \pagenumbering{gobble}
 \include{ThesisSpecificPages/cover_page}
-% \cleardoublepage
-% \include{ThesisSpecificPages/copyright}
+\cleardoublepage
+\include{ThesisSpecificPages/copyright}
 \cleardoublepage
 \include{ThesisSpecificPages/inner_cover_page}
 \cleardoublepage
@@ -274,13 +274,13 @@
 %	\textsf{\textit{\large{} My daughter Anika.}}
 %	\par \end{center}{\large \par}
 
-\doublespacing 
+%\doublespacing
 \include{ThesisSpecificPages/certificate}
 \cleardoublepage
 
 \pagestyle{plain}
 
-\doublespacing 
+%\doublespacing
 \include{ThesisSpecificPages/acknowledge}
 %\addcontentsline{toc}{chapter}{\numberline{}Acknowledgements}
 %==================================================================================
@@ -294,7 +294,7 @@
 %==================================================================================
 %\singlespacing
 \cleardoublepage
-\doublespacing 
+%\doublespacing 
 \include{abstract}
 \cleardoublepage
 %\onehalfspacing 
@@ -316,7 +316,7 @@
 %\cleardoublepage
 %\newpage
 \newpage \ \newpage
-\pagestyle{plain}
+%\pagestyle{plain}
 %==================================================================================
 %=== After Activating Above you can deactivae bellow \TOC
 %==================================================================================
@@ -328,7 +328,7 @@
 \pagestyle{fancy}
 %\singlespacing
 %\onehalfspacing
-\doublespacing
+%\doublespacing
 %\part{Prologue}
 \input{Ch1-Introduction/Chapter1.tex}
 \input{Ch2-AnalyticalFw/Chapter2.tex}
@@ -361,7 +361,7 @@
 
 %\doublespacing 
 \input{ThesisSpecificPages/bio}
-\cleardoublepage
+%\cleardoublepage
 %\onehalfspacing
 \pagestyle{plain}
 
