--- a/thesis/Ch5-SOM/Chapter5.tex
+++ b/thesis/Ch5-SOM/Chapter5.tex
@@ -1,6 +1,6 @@
 \graphicspath{{./Ch5-SOM/images/}}
 
-\chapter[Performance Improvement of SOM by using Low Bit-Width Resolution]{Performance Improvement of SOM by using Low Bit-Width Resolution \footnote{The experiments in this chapter were conducted in collaboration with students from KTH Royal Institute of Technology, Sweden. Their contributions in developing performance metrics and accuracy measurements of different designs of Self Organizing Maps (SOMs) were invaluable to the project's success.}} 
+\chapter[Performance Improvement of SOM by using Low Bit-Width Resolution]{Performance Improvement of SOM by using Low Bit-Width Resolution \footnote{The experiments in this chapter involved joint efforts with other students at KTH Royal Institute of Technology, Sweden. Specifically, some parts of the research utilized measurement data obtained by these collaborators.}} 
 \label{chap:SOM}
 One of the prime reasons for NNs popularlity in last decade is due to their ability to detect patterns accurately. Compared to conventional solutions they scale exceptionally well because of their inherent parallelism. The main strength of the NNs comes from their ability to learn the classification criteria directly form the input data. In essence a NN trained with genomic data compresses its inputs and encodes it in its structure. The NN then can act as a predictor that can be queried about specific features in a given genome, instead of attempting to output linear DNA sequences as done in the conventional assembly. In other words, NNs can invent an algorithm automatically that otherwise would have to be developed by the bioinformatics engineers. The algorithm is defined by the parameters of the networks, as they are developed during its training. That also provides with the possibility of re-training the network in order to update the identification features such as mutations and other genomic alterations that were not known before, without changing the algorithm itself.
 
