grammerly ran on ch5, abstract, ack, conclusion , certificate

--- a/thesis/Ch6-Conclusion/Chapter6.tex
+++ b/thesis/Ch6-Conclusion/Chapter6.tex
@@ -38,17 +38,17 @@ The findings presented in this work offer valuable insights into optimizing neur
 We hope that the outcomes of this research will inspire further exploration and innovation, ultimately leading to the development of smarter and more energy-conscious artificial intelligence systems that positively impact various aspects of human life.
 \end{comment}
 \section{Introduction}
-The past few years have witnessed remarkable growth in Neural Network (NN) based applications, with significant contributions in fields such as healthcare, agriculture, road safety, surveillance, defense, and many others. The availability of modern computing systems capable of handling large datasets and the development of deep learning frameworks like TensorFlow and PyTorch have propelled NNs to achieve human-like performance. These advancements have led to the widespread adoption of NNs in various domains, including embedded systems with limited computing resources and energy budget constraints.
+The past few years have witnessed remarkable growth in Neural Network (NN) based applications, with significant contributions in healthcare, agriculture, road safety, surveillance, defense, and many others. The availability of modern computing systems capable of handling large datasets and the development of deep learning frameworks like TensorFlow and PyTorch have propelled NNs to achieve human-like performance. These advancements have led to the adoption of NNs in various domains, including embedded systems with limited computing resources and energy budget constraints.
 
 The objective of this thesis was to improve the energy efficiency and throughput of NN accelerators on parallel architectures, considering the challenges posed by limited on-chip memory and high off-chip memory accesses. To achieve this goal, we focused on data reuse techniques, data partitioning, and scheduling strategies for different types of NNs.
 
 \section{Recapitulation of Research Objectives}
-The primary aim of this research was to enhance the energy efficiency and throughput of Neural Network (NN) accelerators by minimizing off-chip memory accesses. In \chapref{chap:introduction}, we defined our research objectives to address the challenges of energy efficiency and throughput in NN accelerators. This thesis explored various data reuse techniques for different types of NNs, including Self Organizing Maps (SOMs), Convolutional Neural Networks (CNNs), and Recurrent Neural Networks (RNNs). Additionally, an analytical framework was developed to quantify off-chip memory accesses, taking into account the architectural constraints, and to compare different data partitioning and scheduling schemes for optimizing NN performance on parallel architectures. 
+This research aimed to enhance the energy efficiency and throughput of Neural Network (NN) accelerators by minimizing off-chip memory accesses. In \chapref{chap:introduction}, we defined our research objectives to address the challenges of energy efficiency and throughput in NN accelerators. This thesis explored various data reuse techniques for different types of NNs, including Self Organizing Maps (SOMs), Convolutional Neural Networks (CNNs), and Recurrent Neural Networks (RNNs). An analytical framework was also developed to quantify off-chip memory accesses and compare different data partitioning and scheduling schemes, considering the architectural constraints, for optimizing NN performance on parallel architectures. 
 
 \section{Summary of Key Findings}
 \chapref{chap:analyticalFw} presented an analytical framework that quantifies off-chip memory accesses for DNN layers with varying shapes, considering architectural constraints. This framework allowed us to compare different data partitioning and scheduling schemes and identify the optimal solutions for improving energy and throughput.
 
-In \chapref{chap:CNN}, we proposed a data reuse approach for CNN layers that considers architectural parameters and determines the optimal partitioning and scheduling scheme. Our proposed approach demonstrated significant improvements in energy efficiency and throughput for memory-intensive CNN layers.
+In \chapref{chap:CNN}, we proposed a data reuse approach for CNN layers that considers architectural parameters and determines the optimal partitioning and scheduling scheme. Our proposed approach significantly improved energy efficiency and throughput for memory-intensive CNN layers.
 
 \chapref{chap:RNN} addressed the challenges of data reuse in recurrent neural networks (RNNs), particularly in Long-Short Term Memory Networks (LSTMs). We proposed a novel data reuse approach that efficiently reuses weights for consecutive time steps, significantly reducing off-chip memory accesses and improving energy efficiency.
 
@@ -58,13 +58,13 @@ The findings of this thesis have implications for optimizing NN accelerators in 
 
 Future research directions could involve exploring hardware co-design and architectural optimizations tailored specifically for NN accelerators. Additionally, investigating more advanced quantization and pruning techniques to strike a better balance between accuracy and energy efficiency would be valuable.
 
-We also suggest exploring the incorporation of hardware accelerators specialized for specific NN tasks to further improve energy efficiency and performance. Such accelerators can take advantage of the specific data access patterns and computations inherent in NN layers.
+We also suggest exploring the incorporation of hardware accelerators specialized for specific NN tasks to improve energy efficiency and performance further. Such accelerators can exploit the specific data access patterns and computations inherent in NN layers.
 
 Moreover, addressing the challenges posed by data reuse in more complex and deeply layered neural networks would be an interesting area of research. Investigating techniques to optimize data reuse in multi-layer and multi-modal NNs could lead to more efficient and powerful edge AI devices.
 \section{Closing Remarks}
-In conclusion, this thesis has contributed to the state-of-the-art in energy-efficient execution of modern NNs on parallel architectures. The proposed data reuse approaches and partitioning strategies have demonstrated significant improvements in energy efficiency and throughput for various NN layers. The analytical framework developed in this research provides a valuable tool for comparing different data reuse and scheduling schemes and exploring the design space for optimal solutions.
+In conclusion, this thesis has contributed to the state-of-the-art in energy-efficient execution of modern NNs on parallel architectures. The proposed data reuse approaches and partitioning strategies have significantly improved energy efficiency and throughput for various NN layers. The analytical framework developed in this research provides a valuable tool for comparing different data reuse and scheduling schemes and exploring the design space for optimal solutions.
 
-The work presented here not only advances the field of NN accelerators but also opens up new research directions for the integration of modern AI models into energy-constrained systems. By focusing on efficient data reuse, hardware co-design, and innovative quantization techniques, future researchers can continue to push the boundaries of NN performance on parallel architectures.
+The work presented here not only advances the field of NN accelerators but also opens up new research directions for integrating modern AI models into energy-constrained systems. By focusing on efficient data reuse, hardware co-design, and innovative quantization techniques, future researchers can continue to push the boundaries of NN performance on parallel architectures.
 \section{Conclusion}
 This thesis has successfully addressed the challenges of optimizing neural network performance on parallel architectures with limited on-chip memory. Through the development of novel data reuse approaches, data partitioning, and scheduling strategies, we have significantly improved energy efficiency and throughput for various NN layers.
 
