--- a/thesis/ThesisSpecificPages/certificate.tex
+++ b/thesis/ThesisSpecificPages/certificate.tex
@@ -9,7 +9,7 @@ This is to certify that the thesis titled ``\textbf{OPTIMIZING NEURAL NETWORKS
 	PERFORMANCE ON PARALLEL
 	ARCHITECTURES}'' being submitted by  \textbf{Saurabh Tewari} for the award of \textbf{Doctor of Philosophy} in Computer Science and Engineering is a record of bonafide work carried out by him  under my guidance and supervision in the Department of Computer Science and Engineering, Indian Institute of Technology Delhi. The work presented in this thesis has not been submitted elsewhere, either in part or full, for the award of any other degree or diploma unless otherwise stated explicitly. 
 
-The work presented in \chapref{chap:SOM} on Self Organizing Maps (SOMs) were conducted in collaboration with students at KTH Royal Institute of Technology, Sweden. We acknowledge their valuable contributions explicitly in the corresponding chapter.
+The works presented in \chapref{chap:SOM} on Self Organizing Maps (SOMs) were conducted in collaboration with students at KTH Royal Institute of Technology, Sweden. We acknowledge their valuable contributions explicitly in the corresponding chapter.
 %The work presented in \chapref{chap:SOM} on Self Organizing Maps (SOMs) were conducted in collaboration with students at KTH Royal Institute of Technology, Sweden. The work on this chapter involved joint efforts with other students, and we collectively contributed to the project's success. Specifically, some parts of the research utilized measurement data obtained by these collaborators, and we acknowledge their valuable contributions explicitly in the corresponding chapter.
 
 \vspace {10 pc}
